test/fails/bad_generics/basics8.lgl
void main<`t : vec2>(`t x) {  // It is nonsenical to use generics in the main function
    print 1;
}